--- a/pag_sobreMim/blog.html
+++ b/pag_sobreMim/blog.html
@@ -3,6 +3,7 @@
 	<head>
 		<title>Joao da Silva - Blog</title>
 		<meta chartset="utf-8">
+		<link rek="stylesheet" href="reset.css">
 		<link rel="icon" href="github.png">
 		<link rel="stylesheet" href="site.css">
 		<link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Crimson+Text:400,400italic,600">
