finalizando pag sobre mim e iniciando o desafio

--- a/pag_sobreMim/blog.html
+++ b/pag_sobreMim/blog.html
@@ -3,9 +3,9 @@
 	<head>
 		<title>Joao da Silva - Blog</title>
 		<meta chartset="utf-8">
-		<link rel="stylesheet" href="reset.css">
-		<link rel="icon" href="github.png">
-		<link rel="stylesheet" href="site.css">
+		<link rel="stylesheet" href="css/reset.css">
+		<link rel="icon" href="img/github.png">
+		<link rel="stylesheet" href="css/site.css">
 		<link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Crimson+Text:400,400italic,600">
         <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Open+Sans+Condensed:700">
     </head>
@@ -45,7 +45,7 @@
 				</article>
 			</div>
 		</main>
-		<img src="eu.jpg" alt="Foto de João da Silva">
+		<img src="img/eu.jpg" alt="Foto de João da Silva">
 		<aside>
 			<nav> 
 				<h1>João da Silva</h1>
