--- a/pag_sobreMim/blog.html
+++ b/pag_sobreMim/blog.html
@@ -1,15 +1,14 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>Joao da Silva - Blog</title>
+		<title>Blog - Joao da Silva</title>
 		<meta chartset="utf-8">
 		<link rel="stylesheet" href="css/reset.css">
-		<link rel="icon" href="img/github.png">
+		<link rel="icon" href="img/favicon.png">
 		<link rel="stylesheet" href="css/site.css">
 		<link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Crimson+Text:400,400italic,600">
         <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Open+Sans+Condensed:700">
     </head>
-	</head>
 
 	<body>
 		<main>
@@ -45,22 +44,27 @@
 				</article>
 			</div>
 		</main>
-		<img src="img/eu.jpg" alt="Foto de João da Silva">
-		<aside>
+		<img class="minha-foto" src="img/eu.jpg" alt="Foto de João da Silva">
+		<aside class="navegacao-site">
 			<nav> 
 				<h1>João da Silva</h1>
 				<ul>
-					<li><a href="#">home</a></li>
-					<li><a href="#">portifólio</a></li>
+					<li><a href="#">Home</a></li>
+					<li><a href="portifolio.html">Portifólio</a></li>
 					<li><a href="#">sobre mim</a></li>
-					<li><a href="#">blog</a></li>
+					<li><a href="blog.html">blog</a></li>
 					<li><a href="#">contato</a></li>
 				</ul>
 			</nav>
+			<ul class="icones-sociais">
+				<li><a class="github" href="http://github.com/gabrielnp">Github</a></li>
+				<li><a class="twitter" href="http://twitter.com">Twitter</a></li>
+				<li><a class="linkedin" href="http://linkedin.com">LinkedIn></a></li>
+			</ul>
 		</aside>
 
 		<footer id="rodape-pagina">
-			&copy; João da Silva 2014
+			&copy; João da Silva 2018
 		</footer>
 
 	</body>
