finalizando desafio portifolio

--- a/pag_sobreMim/portifolio.html
+++ b/pag_sobreMim/portifolio.html
@@ -5,6 +5,7 @@
         <title>Portifólio - João da Silva</title>    
         <link rel="stylesheet" href="css/reset.css">
         <link rel="stylesheet" href="css/site.css">
+        <link rel="stylesheet" href="css/portifolio.css">
         <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Crimson+Text:400,400italic,600">
         <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Open+Sans+Condensed:700">
         <link rel="icon" href="img/favicon.png">
@@ -17,48 +18,52 @@
             <div class="container">
                 <p>Veja abaixo a lista dos meus projetos mais relevantes:</p>
 
-                    <div class="row">
-
-                        <div class="column">
-                            <figure class="bmw">
+                <ul class="portifolio">
+                    <li>
+                        <a href="http://bmw.com">
+                            <figure>
                                 <img src="img/bmw.png" alt="Foto do site da BMW">
-                                <figcaption><a href="http://bmw.com">BMW.com: reformulação de design e implementação de HTML, CSS e JavaScript</a></figcaption>
+                                <figcaption>BMW.com: reformulação de design e implementação de HTML, CSS e JavaScript</figcaption>
                             </figure>
-                        </div>
-
-                        <div class="column">
-                            <figure class="uol">
-                                    <img src="img/uol.png" alt="Foto do site da BMW">
-                                    <figcaption><a href="http://uol.com.br">UOL.com.br: reformulação de design e implementação de HTML, CSS e JavaScript</a></figcaption>
+                        </a>                            
+                    </li>
+                    <li>
+                        <a href="http://uol.com.br">
+                            <figure>
+                                    <img src="img/uol.png" alt="Foto do site da UOL">
+                                    <figcaption>UOL.com.br: reformulação de design e implementação de HTML, CSS e JavaScript</figcaption>
                             </figure>
-                        </div>
-
-                        <div class="column">
-                            <figure class="ibm">
-                                <img src="img/ibm.png" alt="Foto do site da BMW">
-                                <figcaption><a href="http://ibm.com">BMW.com: reformulação de design e implementação de HTML, CSS e JavaScript</a></figcaption>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="http://ibm.com">
+                            <figure>
+                                <img src="img/ibm.png" alt="Foto do site da IBM">
+                                <figcaption>IBM.com: aplicação de progressive enhancement em conjunto com aplicação back-end</figcaption>
                             </figure>
-                        </div>
-            
-                        <div class="column">
-                            <figure class="g1">
-                                <img src="img/g1.png" alt="Foto do site da BMW">
-                                <figcaption><a href="http://g1.com.br">UOL.com.br: reformulação de design e implementação de HTML, CSS e JavaScript</a></figcaption>
+                        </a>
+                    </li>            
+                    <li>
+                        <a href="http://g1.com.br">
+                            <figure>
+                                <img src="img/g1.png" alt="Foto do site do G1">
+                                <figcaption>G1.com.br: reformulação de design e implementação de HTML, CSS e JavaScript</figcaption>
                             </figure>
-                        </div>
-                    </div>
+                        </a>
+                    </li>
+                </ul>
         </div>
 
         </main>
 
        <img class="minha-foto" src="img/eu.jpg" alt="Foto de João da Silva">
-        <aside class="navegacao-site"> <!-- conteúdo auxiliar, complementa conteúdo principal-->
-            <nav> <!-- nav = TAG semântica --> 
+        <aside class="navegacao-site">
+            <nav>
                 <h1>João da Silva</h1>
                 <ul>
                     <li><a href="#">Home</a></li>
                     <li><a href="portifolio.html">Portifólio</a></li>
-                    <li><a href="#">sobre mim</a></li>
+                    <li><a href="bio.html">sobre mim</a></li>
                     <li><a href="blog.html">blog</a></li>
                     <li><a href="#">contato</a></li>
                 </ul>
